syntax = "proto3";

package blockchain;

import "google/protobuf/any.proto";
import "mino/messages.proto";

message Conode {
    mino.Address address = 1;
    google.protobuf.Any publicKey = 2;
}

message Block {
    uint64 index = 1;
    google.protobuf.Any header = 2;
    google.protobuf.Any payload = 3;
    repeated Conode roster = 4;
}

message VerifiableBlock {
    Block block = 1;
    google.protobuf.Any proof = 2;
}

message Event {
    Block block = 1;
}
