syntax = "proto3";

package skipchain;

import "google/protobuf/any.proto";

message ForwardLink {
    bytes from = 1;
    bytes to = 2;
    google.protobuf.Any prepare = 3;
    google.protobuf.Any commit = 4;
}

message SkipBlockHeader {
    uint64 height = 1;
    uint64 baseHeight = 2;
    uint64 maximumHeight = 3;
    bytes genesisID = 4;
    bytes dataHash = 5;
    repeated bytes backlinks = 6;
    repeated ForwardLink forwardlinks = 7;
}
